# Fitness-Plotter

./: .gitignore  README.md  pyproject.toml
fitness_plotter/fitness_plotter/: plot_all.py
fitness_plotter/fitness_plotter/garmin/: fit_file.py
notebooks/: plot_activities.ipynb  read_single_file.ipynb
