[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness_plotter"
version = "0.1.0-alpha"
description = "A project to plot fitness data"

authors = [
    { name="Christopher Wild", email="christopherwild56@gmail.com" }
]

dependencies = [
    "garmin_fit_sdk",
    "tqdm"
]

[project.scripts]
plot_all = "fitness_plotter.plot_all:plot_all"

[tool.setuptools.packages.find]
where = ["fitness_plotter/"]